// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> renders a redirect when appropriate 1`] = `
<div>
  <TextField
    disabled={false}
    floatingLabelFixed={false}
    fullWidth={false}
    hintText="Search for a Github user"
    id="search-text"
    multiLine={false}
    onChange={[Function]}
    onKeyPress={[Function]}
    rows={1}
    type="text"
    underlineShow={true}
    value=""
  />
  <FlatButton
    backgroundColor="#71b045"
    disabled={false}
    fullWidth={false}
    hoverColor="#000000"
    icon={<ActionSearch />}
    labelPosition="after"
    labelStyle={Object {}}
    onClick={[Function]}
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    primary={false}
    secondary={false}
    style={
      Object {
        "color": "#ffffff",
        "marginLeft": "5px",
        "minWidth": "40px",
      }
    }
  />
  <Redirect
    push={false}
    to={
      Object {
        "pathname": "/",
        "state": Object {
          "from": undefined,
        },
      }
    }
  />
</div>
`;

exports[`<Search /> renders correctly 1`] = `
<div>
  <TextField
    disabled={false}
    floatingLabelFixed={false}
    fullWidth={false}
    hintText="Search for a Github user"
    id="search-text"
    multiLine={false}
    onChange={[Function]}
    onKeyPress={[Function]}
    rows={1}
    type="text"
    underlineShow={true}
    value=""
  />
  <FlatButton
    backgroundColor="#71b045"
    disabled={false}
    fullWidth={false}
    hoverColor="#000000"
    icon={<ActionSearch />}
    labelPosition="after"
    labelStyle={Object {}}
    onClick={[Function]}
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    primary={false}
    secondary={false}
    style={
      Object {
        "color": "#ffffff",
        "marginLeft": "5px",
        "minWidth": "40px",
      }
    }
  />
</div>
`;
